add video listing and viewing for the first 4 videos

--- a/app/views/doc/index.html.haml
+++ b/app/views/doc/index.html.haml
@@ -62,34 +62,26 @@
 
   %h2 Videos
 
+  - groups = @videos[0,4].group_by { |i| i[0] % 2 }
+
   %div.two-column
     %div.column-left
       %ul.video-thumbnails
-        %li
-          =link_to(image_tag('tmp/screencast-thumbnail.png'))
-          %h4= link_to "Name of this Screencast"
-          %p.description
-            <strong>Length:</strong> 7:18
-
-        %li
-          =link_to(image_tag('tmp/screencast-thumbnail.png'))
-          %h4= link_to "Name of this Screencast"
-          %p.description
-            <strong>Length:</strong> 7:18
+        - groups[0].each do |video|
+          %li
+            =link_to(image_tag("video/ep#{ video[0] }.png"), "/video/what-is-git")
+            %h4= link_to video[3]
+            %p.description
+              =raw "<strong>Length:</strong> #{video[5]}"
 
     %div.column-right
       %ul.video-thumbnails
-        %li
-          =link_to(image_tag('tmp/screencast-thumbnail.png'))
-          %h4= link_to "Name of this Screencast"
-          %p.description
-            <strong>Length:</strong> 7:18
-
-        %li
-          =link_to(image_tag('tmp/screencast-thumbnail.png'))
-          %h4= link_to "Name of this Screencast"
-          %p.description
-            <strong>Length:</strong> 7:18
+        - groups[1].each do |video|
+          %li
+            =link_to(image_tag("video/ep#{ video[0] }.png"), "/video/what-is-git")
+            %h4= link_to video[3]
+            %p.description
+              =raw "<strong>Length:</strong> #{video[5]}"
 
   %p
     %strong= link_to "See all videos →", "/videos"
