--- a/app/views/doc/videos.html.erb
+++ b/app/views/doc/videos.html.erb
@@ -2,75 +2,35 @@
 <%- @subsection = 'videos' %>
 <%- @page_title = 'Git - Videos' %>
 
+<% groups = @videos.group_by { |i| i[0] % 2 } %>
+
 <div id='main'>
   <h1>Videos</h1>
-  <p>
-    A short introductory paragraph here. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-    tempor incididunt ut labore et dolore magna aliqua.
-  </p>
   <div class='two-column'>
     <div class='column-left'>
       <ul class='video-thumbnails'>
-        <li>
-          <a href="javascript:void(0);"><img src="/images/tmp/screencast-thumbnail.png" /></a>
-          <h4><a href="javascript:void(0);">Name of this Screencast</a></h4>
-          <p class='description'>
-            <strong>Length:</strong> 7:18
-          </p>
-        </li>
-        <li>
-          <a href="javascript:void(0);"><img src="/images/tmp/screencast-thumbnail.png" /></a>
-          <h4><a href="javascript:void(0);">Name of this Screencast</a></h4>
-          <p class='description'>
-            <strong>Length:</strong> 7:18
-          </p>
-        </li>
-        <li>
-          <a href="javascript:void(0);"><img src="/images/tmp/screencast-thumbnail.png" /></a>
-          <h4><a href="javascript:void(0);">Name of this Screencast</a></h4>
-          <p class='description'>
-            <strong>Length:</strong> 7:18
-          </p>
-        </li>
-        <li>
-          <a href="javascript:void(0);"><img src="/images/tmp/screencast-thumbnail.png" /></a>
-          <h4><a href="javascript:void(0);">Name of this Screencast</a></h4>
-          <p class='description'>
-            <strong>Length:</strong> 7:18
-          </p>
-        </li>
+        <% groups[0].each do |video| %>
+          <li>
+            <a href="/video/<%= video[4] %>"><img src="/images/video/ep<%= video[0] %>.png" /></a>
+            <h4><a href="/video/<%= video[4] %>"><%= video[3] %></a></h4>
+            <p class='description'>
+              <strong>Length:</strong> <%= video[5] %>
+            </p>
+          </li>
+        <% end %>
       </ul>
     </div>
     <div class='column-right'>
       <ul class='video-thumbnails'>
-        <li>
-          <a href="javascript:void(0);"><img src="/images/tmp/screencast-thumbnail.png" /></a>
-          <h4><a href="javascript:void(0);">Name of this Screencast</a></h4>
-          <p class='description'>
-            <strong>Length:</strong> 7:18
-          </p>
-        </li>
-        <li>
-          <a href="javascript:void(0);"><img src="/images/tmp/screencast-thumbnail.png" /></a>
-          <h4><a href="javascript:void(0);">Name of this Screencast</a></h4>
-          <p class='description'>
-            <strong>Length:</strong> 7:18
-          </p>
-        </li>
-        <li>
-          <a href="javascript:void(0);"><img src="/images/tmp/screencast-thumbnail.png" /></a>
-          <h4><a href="javascript:void(0);">Name of this Screencast</a></h4>
-          <p class='description'>
-            <strong>Length:</strong> 7:18
-          </p>
-        </li>
-        <li>
-          <a href="javascript:void(0);"><img src="/images/tmp/screencast-thumbnail.png" /></a>
-          <h4><a href="javascript:void(0);">Name of this Screencast</a></h4>
-          <p class='description'>
-            <strong>Length:</strong> 7:18
-          </p>
-        </li>
+        <% groups[1].each do |video| %>
+          <li>
+            <a href="/video/<%= video[4] %>"><img src="/images/video/ep<%= video[0] %>.png" /></a>
+            <h4><a href="/video/<%= video[4] %>"><%= video[3] %></a></h4>
+            <p class='description'>
+              <strong>Length:</strong> <%= video[5] %>
+            </p>
+          </li>
+        <% end %>
       </ul>
     </div>
   </div>
