--- a/app/views/doc/watch.html.haml
+++ b/app/views/doc/watch.html.haml
@@ -2,19 +2,14 @@
 - @subsection = "videos"
 
 - content_for :sidebar do
-  %div.callout
-    %p
-      The entire <strong><a href="#">Pro Git book</a></strong> written by Scott Chacon is available to <a href="#">read online for free</a>. Dead tree versions are available on <a href="#">Amazon.com</a>.
+  = render 'shared/book'
 
 %div#main
-  %h1 Git Basics Episode 1 
+  %h1= "#{@video[2]} Episode #{@video[0]}"
 
-  %h2 What Is Version Control?
+  %h2= @video[3]
 
   %div#video-container
-    <iframe src="http://player.vimeo.com/video/41027679?title=0&amp;byline=0&amp;portrait=0&amp;color=f14e32" width="635" height="357" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-
-  %p
-    A meaningful discussion of the value of Git begins with a solid understanding of what version control is and what it does for software developers, document authors, and designers. In this screencast, Matthew McCullough shares the basic ideas of version control and the motivations for using it.
+    =raw "<iframe src=\"http://player.vimeo.com/video/#{@video[1]}?title=0&amp;byline=0&amp;portrait=0&amp;color=f14e32\" width=\"635\" height=\"360\" frameborder=\"0\" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>"
 
 
