finishing up for initial relaunch

--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -1,6 +1,6 @@
 %footer
   %div.site-source
-    The <a href="https://github.com/git/gitscm">source for this site</a> is hosted on GitHub.<br>
+    The <a href="https://github.com/github/gitscm-next">source for this site</a> is hosted on GitHub.<br>
     Patches, suggestions, and comments are welcome.
 
   %div.sfc-member
