--- a/app/views/layouts/layout.html.haml
+++ b/app/views/layouts/layout.html.haml
@@ -7,6 +7,7 @@
       %title Git
     %meta{:charset => "utf-8"}    
     %meta{:content => "IE=edge,chrome=1", "http-equiv" => "X-UA-Compatible"}
+    %link{:rel => "shortcut icon", "href" => "/favicon.ico", :type => "image/x-icon"}
     = stylesheet_link_tag "git-scm.css" 
     = javascript_include_tag "modernizr.js", "modernizr-tests.js"
     /[if (gte IE 6)&(lte IE 8)]
