Fixed typo on logo download page

--- a/app/views/downloads/logos/index.html.haml
+++ b/app/views/downloads/logos/index.html.haml
@@ -27,7 +27,7 @@
             =link_to "EPS (vector)", "/images/logos/downloads/Git-Logo-1788C.eps"
         %li
           =link_to(image_tag('logos/1color-lightbg.png'))
-          %h4 One color Git logo for dark backgrounds
+          %h4 One color Git logo for light backgrounds
           %p.description
             =link_to "PNG (bitmap)", "/images/logos/downloads/Git-Logo-Black.png"
             &middot;
