--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -1,5 +1,5 @@
 %header
-  <a href="/"><img src="/images/logo.png" /></a>
+  <a href="/"><img src="/images/logo.png" width="110" height="46" alt="Git" /></a>
   %span#tagline
     =raw random_tagline
 
