Correct links to videos

--- a/app/views/doc/index.html.haml
+++ b/app/views/doc/index.html.haml
@@ -69,7 +69,7 @@
       %ul.video-thumbnails
         - groups[1].each do |video|
           %li
-            =link_to(image_tag("video/ep#{ video[0] }.png"), "/video/what-is-git")
+            =link_to(image_tag("video/ep#{ video[0] }.png"), "/video/#{ video[4] }")
             %h4= link_to video[3]
             %p.description
               =raw "<strong>Length:</strong> #{video[5]}"
@@ -78,7 +78,7 @@
       %ul.video-thumbnails
         - groups[0].each do |video|
           %li
-            =link_to(image_tag("video/ep#{ video[0] }.png"), "/video/what-is-git")
+            =link_to(image_tag("video/ep#{ video[0] }.png"), "/video/#{ video[4] }")
             %h4= link_to video[3]
             %p.description
               =raw "<strong>Length:</strong> #{video[5]}"
