--- a/app/views/shared/_monitor.html.haml
+++ b/app/views/shared/_monitor.html.haml
@@ -9,7 +9,7 @@
   - when /Macintosh/
     =link_to "Download for Mac", "/download/mac", {:class => 'button', :id => 'download-link'}
   - when /Windows/
-    =link_to "Download for Windows", "/download/windows", {:class => 'button', :id => 'download-link'}
+    =link_to "Download for Windows", "/download/win", {:class => 'button', :id => 'download-link'}
   - when /Linux/
     =link_to "Download for Linux", "/download/linux", {:class => 'button', :id => 'download-link'}
   - else
