--- a/app/views/site/sfc.html.erb
+++ b/app/views/site/sfc.html.erb
@@ -9,7 +9,7 @@
 
   <p>The SFC accepts donations on git's behalf. In the past, project money has
   typically gone to defraying travel costs for developers to come to our annual
-  <a href="https://git.wiki.kernel.org/articles/g/i/t/GitTogether_3474.html">GitTogether</a>
+  <a href="https://git.wiki.kernel.org/index.php/GitTogether">GitTogether</a>
   mini-conference.  A portion of the money goes to the SFC to cover their
   operating expenses. You can also donate <a
   href="http://sfconservancy.org/donate">directly</a> to the Conservancy's
