fix video links

--- a/app/views/doc/index.html.haml
+++ b/app/views/doc/index.html.haml
@@ -70,7 +70,7 @@
         - groups[1].each do |video|
           %li
             =link_to(image_tag("video/ep#{ video[0] }.png"), "/video/#{ video[4] }")
-            %h4= link_to video[3]
+            %h4= link_to video[3], "/video/#{ video[4] }"
             %p.description
               =raw "<strong>Length:</strong> #{video[5]}"
 
@@ -79,7 +79,7 @@
         - groups[0].each do |video|
           %li
             =link_to(image_tag("video/ep#{ video[0] }.png"), "/video/#{ video[4] }")
-            %h4= link_to video[3]
+            %h4= link_to video[3], "/video/#{ video[4] }"
             %p.description
               =raw "<strong>Length:</strong> #{video[5]}"
 
