link to s3 media

--- a/app/views/doc/index.html.haml
+++ b/app/views/doc/index.html.haml
@@ -29,7 +29,7 @@
         Pro Git is written by Scott Chacon and published by Apress.
 
       %p 
-        Print copies can be purchased from <a href="http://www.amazon.com/gp/product/1430218339?ie=UTF8&tag=prgi-20&linkCode=as2&camp=1789&creative=390957&creativeASIN=1430218339">Amazon</a> and <a href="/pro-git-ebooks/progit.pdf">PDF</a>, <a href="/pro-git-ebooks/pro-git.en.mobi">mobi</a>, and <a href="/pro-git-ebooks/progit.epub">ePub</a> versions are available for free. 
+        Print copies can be purchased from <a href="http://www.amazon.com/gp/product/1430218339?ie=UTF8&tag=prgi-20&linkCode=as2&camp=1789&creative=390957&creativeASIN=1430218339">Amazon</a> and <a href="https://github.s3.amazonaws.com/media/pro-git.pdf">PDF</a>, <a href="https://github.s3.amazonaws.com/media/pro-git.en.mobi">mobi</a>, and <a href="https://github.s3.amazonaws.com/media/progit.epub">ePub</a> versions are available for free. 
       %p
         <a href="#" id="open-book">Back to book →</a>
       %p.license
