--- a/app/views/shared/ref/_patching.html.erb
+++ b/app/views/shared/ref/_patching.html.erb
@@ -1,6 +1,6 @@
 <h3 class='patching'>Patching</h3>
 <ul class='unstyled'>
-  <li><%= man('git-am') %></li>
+  <li><%= man('git-diff') %></li>
   <li><%= man('git-apply') %></li>
   <li><%= man('git-cherry-pick') %></li>
   <li><%= man('git-rebase') %></li>
