typo: inconvience -> inconvenience

--- a/app/views/site/404.html.haml
+++ b/app/views/site/404.html.haml
@@ -4,7 +4,7 @@
 %h1 That page doesn't exist.
 
 %p
-  We recently redesigned the site and older URLs may now lead to missing pages. We apologize for the inconvience.
+  We recently redesigned the site and older URLs may now lead to missing pages. We apologize for the inconvenience.
 
 %nav
   %ul
