--- a/app/views/site/500.html.haml
+++ b/app/views/site/500.html.haml
@@ -4,7 +4,7 @@
 %h1 Internal server error
 
 %p
-  There was an error processing your request. We have been notified of the error and will investigate ASAP. We apologize for the inconvience.
+  There was an error processing your request. We have been notified of the error and will investigate ASAP. We apologize for the inconvenience.
 
 %nav
   %ul
