cache man pages more aggressively

--- a/app/views/doc/man.html.erb
+++ b/app/views/doc/man.html.erb
@@ -2,14 +2,18 @@
 <% @subsection = 'reference' %>
 
 <% content_for :sidebar do %>
-  <%= render 'shared/related' %>
+  <%= cache("#{@cache_key}-related") do %>
+    <%= render 'shared/related' %>
+  <% end %>
 <% end %>
 
-<div id='reference-version'>
-  <%= render 'doc/topics' %>
-  <%= render 'doc/versions' %>
-</div>
+<%= cache(@cache_key) do %>
+  <div id='reference-version'>
+    <%= render 'doc/topics' %>
+    <%= render 'doc/versions' %>
+  </div>
 
-<div id='main'>
-  <%=raw @doc.html %>
-</div>
+  <div id='main'>
+    <%=raw @doc.html %>
+  </div>
+<% end %>
