license of the site

--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -1,6 +1,6 @@
 %footer
   %div.site-source
-    The <a href="https://github.com/github/gitscm-next">source for this site</a> is hosted on GitHub.<br>
+    This <a href="https://github.com/github/gitscm-next/blob/master/README.md#license">open sourced</a> site is <a href="https://github.com/github/gitscm-next">hosted on GitHub.</a><br>
     Patches, suggestions, and comments are welcome.
 
   %div.sfc-member
