removed JS obfuscation for mailto link

--- a/app/views/community/index.html.haml
+++ b/app/views/community/index.html.haml
@@ -11,25 +11,7 @@
   %h2 Mailing List
 
   %p
-    Questions or comments for the Git community can be sent to the mailing list by using the email address 
-    :javascript
-      var x="function f(x,y){var i,o=\"\",l=x.length;for(i=0;i<l;i++){if(i>(42+y))" +
-      "y*=2;y%=127;o+=String.fromCharCode(x.charCodeAt(i)^(y++));}return o;}f(\"L^" +
-      "BNZF__\\022U\\034M\\037LNXH\\033U\\021Q\\002bcn,(x>i$,$,8%b#m>>h#=?;=q\\\"u" +
-      "?5?-#\\016\\006\\006%\\021N\\013GXYBMPVVY\\n\\006\\001\\r\\016\\016\\\\E\\0" +
-      "01A\\027W@\\022;\\177eoj]Wh$k898 (:a#v `\\177t9ooco<{zq\\\"5pa%p<\\010\\000" +
-      "\\020\\\"\\020M\\017NS\\024\\030\\016\\030\\030\\034\\001P\\036\\\\\\000\\0" +
-      "01\\027\\005\\003\\nQJW\\023\\021W;\\177`&<\\027G03*R<H\\002pamx8W\\007#3+a" +
-      "2d.O[V:,\\016\\\"\\\\I[^^K>ZW1?.b\\\"206RBMJ12ZRo\\017L0^Z@Xc?S46>BbI02ZRfz" +
-      ".N47>Bb\\r{qhpo\\t\\024rseZyE\\010*b|o{T\\031+V<n~H\\025\\\\ ZR~\\002\\\"\\" +
-      "\\^Z[,\\014N\\\\^1<.b\\\"716RBL\\\"\\\\34>BbK02ZR/\\016N\\\\^]>.\\016\\\"\\" +
-      "\\75>BbI22ZR*\\rN\\\\^3>.b\\\"436RB\\017N0^ZzBb\\\"\\\"*`s%Q^npsz{L\\003;+/" +
-      "%5GV^+o&j\\177\\033dmE|\\177V\\035.z.kzQ=rcnMsQ\\014f,a`wL\\nS?-a%\\tL1?#w%" +
-      "WC+{/7.\\017C=k.hwEW+)o5r\\002\\027;2;g6L\\021f9nzyP\\033l,~3r\\022\\\"\\\"" +
-      "^$3q\\022\\027 pgxe\\027\\007,z.h>P\\021ive`kX\\\\)\",42)"                   ;
-      while(x=eval(x));
-
-    \. <strong>Bug reports should be sent to this mailing list.</strong>
+    Questions or comments for the Git community can be sent to the mailing list by using the email address <a href="mailto:git@vger.kernel.org">git@vger.kernel.org</a>. <strong>Bug reports should be sent to this mailing list.</strong>
 
   %p
     The <a href="http://dir.gmane.org/gmane.comp.version-control.git">archive of the Git mailing list</a> can be found on Gmane. 
