--- a/app/views/site/index.html.haml
+++ b/app/views/site/index.html.haml
@@ -42,8 +42,8 @@
 
     %table
       %tr
-        %td{:nowrap => true}= link_to "Mac GUIs", "/download/gui/mac", {:class => 'icon gui', :id => 'gui-link'}
-        %td{:nowrap => true}= link_to "Older Releases", "https://github.com/git/git/tags", {:class => 'icon older-releases'}
+        %td{:nowrap => true}= link_to "Graphical UIs", "/downloads/guis", {:class => 'icon gui', :id => 'gui-link'}
+        %td{:nowrap => true}= link_to "Tarballs", "https://github.com/git/git/tags", {:class => 'icon older-releases'}
       %tr
         %td{:nowrap => true}= link_to "Windows Build", "/download/win", {:class => 'icon windows', :id => 'alt-link'}
         %td{:nowrap => true}= link_to "Source Code", "https://github.com/git/git", {:class => 'icon source'}
