sensible defaults for monitor and os filter when js is disabled

--- a/app/assets/stylesheets/front-page.css.scss
+++ b/app/assets/stylesheets/front-page.css.scss
@@ -108,8 +108,11 @@ $monitor-height: 271px;
 }
 
 .monitor {
-  width: 313px;
-  height: 271px;
+  background: transparent url(/images/monitor-default.png) top right no-repeat;
+  padding-top: 45px;
+  padding-left: 40px;
+  height: $monitor-height - 45;
+  width: $monitor-width - 40;
   color: #fff;
   text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.2);
   h4 {
@@ -160,17 +163,9 @@ $monitor-height: 271px;
   }
   &.windows {
     background: transparent url(/images/monitor-windows.png) top right no-repeat;
-    padding-top: 45px;
-    padding-left: 40px;
-    height: $monitor-height - 45;
-    width: $monitor-width - 40;
   }
   &.linux {
     background: transparent url(/images/monitor-linux.png) top right no-repeat;
-    padding-top: 45px;
-    padding-left: 40px;
-    height: $monitor-height - 45;
-    width: $monitor-width - 40;
   }
 }
 
