--- a/app/assets/stylesheets/typography.css.scss
+++ b/app/assets/stylesheets/typography.css.scss
@@ -292,7 +292,11 @@ a.subtle-button {
 }
 
 a#gui-os-filter {
+  display: none;
   margin-top: 15px;
+  &.visible {
+    @include inline-block;
+  }
 }
 
 div.more {
