Added OpenBSD to the list.

--- a/app/views/downloads/download_linux.html.erb
+++ b/app/views/downloads/download_linux.html.erb
@@ -20,5 +20,8 @@ $ make install</code>
 
   <h3>Solaris 11 Express</h3>
   <code>$ pkg install developer/versioning/git</code>
+  
+  <h3>OpenBSD</h3>
+  <code>$ pkg_add git</code>
 
 </div>
