Fixed newline in FreeBSD directions

--- a/app/views/downloads/download_linux.html.erb
+++ b/app/views/downloads/download_linux.html.erb
@@ -15,8 +15,7 @@
   <code>$ emerge --ask --verbose dev-vcs/git</code>
 
   <h3>FreeBSD</h3>
-  <code>$ cd /usr/ports/devel/git
-$ make install</code>
+  <code>$ cd /usr/ports/devel/git<br>$ make install</code>
 
   <h3>Solaris 11 Express</h3>
   <code>$ pkg install developer/versioning/git</code>
