--- a/app/views/site/index.html.haml
+++ b/app/views/site/index.html.haml
@@ -55,7 +55,7 @@
   %ul
     %li= link_to "Google", "https://github.com/google", {:class => 'google'}
     %li= link_to "Facebook", "https://github.com/facebook", {:class => 'facebook'}
-    %li= link_to "Microsoft", "https://github.com/WindowsAzure", {:class => 'microsoft'}
+    %li= link_to "Microsoft", "http://www.codeplex.com", {:class => 'microsoft'}
     %li= link_to "Twitter", "https://github.com/twitter", {:class => 'twitter'}
     %li= link_to "LinkedIn", "https://github.com/linkedin", {:class => 'linked-in'}
     %li= link_to "Linux", "http://git.kernel.org/?p=linux/kernel/git/torvalds/linux-2.6.git;a=summary", {:class => 'linux'}
