replacing debian icon with tux for linux link - fixes #78

--- a/app/assets/stylesheets/front-page.css.scss
+++ b/app/assets/stylesheets/front-page.css.scss
@@ -278,6 +278,9 @@ a.icon {
   &.debian {
     background: transparent url(/images/icons/debian.png) 6px 4px no-repeat;
   }
+  &.linux {
+    background: transparent url(/images/icons/linux.png) 6px 4px no-repeat;
+  }
   &.solaris {
     background: transparent url(/images/icons/solaris.png) 0 7px no-repeat;
   }
