--- a/app/views/downloads/index.html.haml
+++ b/app/views/downloads/index.html.haml
@@ -15,7 +15,7 @@
             %td= link_to "Mac OS X", "/download/mac", {:class => 'icon mac'}
             %td= link_to "Windows", "/download/win", {:class => 'icon windows'}
           %tr
-            %td= link_to "Linux", "/download/linux", {:class => 'icon debian'}
+            %td= link_to "Linux", "/download/linux", {:class => 'icon linux'}
             %td= link_to "Solaris", "/download/linux", {:class => 'icon solaris'}
 
       %p
