change to license wording, fixes #81

--- a/app/views/about/index.html.haml
+++ b/app/views/about/index.html.haml
@@ -282,7 +282,7 @@
       %ul.bullets
         %li Make proprietary changes to Git and publicly redistribute it without sharing the changes
         %li Make and publicly distribute changes to Git under a different license
-        %li Use source code from the Git repository in a different project without permission
+        %li Use source code from the Git repository in a project under a different license without permission
 
     %div.bottom-nav
       =link_to "← Staging Area", "#", {:class => 'previous', 'data-section-id' => 'staging-area'}
