netflix logo for front page

--- a/app/assets/stylesheets/front-page.css.scss
+++ b/app/assets/stylesheets/front-page.css.scss
@@ -210,6 +210,9 @@ $monitor-height: 271px;
       &.blizzard {
         background-image: url(/images/company-project-logos/blizzard.png);
       }
+      &.netflix {
+        background-image: url(/images/company-project-logos/netflix.png);
+      }
       &.linked-in {
         background-image: url(/images/company-project-logos/linked-in.png);
       }
