--- a/app/views/site/index.html.haml
+++ b/app/views/site/index.html.haml
@@ -58,12 +58,12 @@
     %li= link_to "Microsoft", "http://aspnetwebstack.codeplex.com", {:class => 'microsoft'}
     %li= link_to "Twitter", "https://github.com/twitter", {:class => 'twitter'}
     %li= link_to "LinkedIn", "https://github.com/linkedin", {:class => 'linked-in'}
-    %li= link_to "Linux", "http://git.kernel.org/?p=linux/kernel/git/torvalds/linux-2.6.git;a=summary", {:class => 'linux'}
+    %li= link_to "Netflix", "https://github.com/netflix", {:class => 'netflix'}
     %li= link_to "Perl", "http://perl5.git.perl.org/perl.git", {:class => 'perl'}
     %li= link_to "PostgreSQL", "http://git.postgresql.org/gitweb/", {:class => 'postgresql'}
 
     %li= link_to "Android", "https://android-review.googlesource.com/#/q/status:open,n,z", {:class => 'android'}
-    %li= link_to "Debian", "http://anonscm.debian.org/gitweb/", {:class => 'debian'}
+    %li= link_to "Linux", "http://git.kernel.org/?p=linux/kernel/git/torvalds/linux-2.6.git;a=summary", {:class => 'linux'}
     %li= link_to "Ruby on Rails", "https://github.com/rails/rails", {:class => 'rails'}
     %li= link_to "Qt", "http://qt.gitorious.org/", {:class => 'qt'}
     %li= link_to "Gnome", "http://git.gnome.org/browse/", {:class => 'gnome'}
