added links to ebook formats in sidebar

--- a/app/views/doc/_translations.html.erb
+++ b/app/views/doc/_translations.html.erb
@@ -4,7 +4,7 @@ This book is translated into
   <a href="/book/zh">Chinese</a>, 
   <a href="/book/fr">French</a>,
   <a href="/book/ja">Japanese</a> and 
-  <a href="/book/nl">Dutch</a>
+  <a href="/book/nl">Dutch</a>.
 </p>
 
 <p>
@@ -17,7 +17,7 @@ Partial translations available in
   <a href="/book/mk">Macedonian</a>,
   <a href="/book/pl">Polish</a>,
   <a href="/book/th">Thai</a> and
-  <a href="/book/ru">Russian</a>
+  <a href="/book/ru">Russian</a>.
 </p>
 
 <hr class="sidebar"/>
