--- a/app/views/doc/book_section.html.erb
+++ b/app/views/doc/book_section.html.erb
@@ -2,6 +2,7 @@
 <% @subsection = 'book' %>
 
 <% content_for :sidebar do %>
+  <%= render 'ebooks' %>
   <%= render 'translations' %>
   <%= render 'shared/related' %>
 <% end %>
