--- a/app/views/doc/index.html.haml
+++ b/app/views/doc/index.html.haml
@@ -57,7 +57,7 @@
                 %h2
                   = chapter.number.to_s + '.'
                   %a{:href=>"/book/#{@book.code}/#{chapter.sections.first.slug}"}= chapter.title
-          <a href="#" id="about-book">About this book</a>
+          <a href="#" id="about-book">Book information and downloads</a>
 
 
   %h2 Videos
