--- a/app/views/doc/book.html.erb
+++ b/app/views/doc/book.html.erb
@@ -3,6 +3,7 @@
 <%- @page_title = "Git - Book" %>
 
 <% content_for :sidebar do %>
+  <%= render 'ebooks' %>
   <%= render 'translations' %>
 <% end %>
 
